同步于: 9月23日4时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -50,4 +50,4 @@
 #### [ 新疆封城惊传一天22人活活饿死 民众抗议超600人遭逮捕(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017305.md)
 #### [ 二十大前点名六野心家 两天判五虎 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13830330.md)
 #### [ 普京电视讲话发出更大威胁 国际社会回应](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13829615.md)
-#### [ 【禁闻】旅美律师：中共必定下台 请做好准备](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103533644.md)
+#### [ “孙力军团伙”前司法部长傅政华被判死缓](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13830058.md)
