--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -30,10 +30,10 @@
 #### [ 怎么了？大陆爆“航班大面积取消”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017282.md)
 #### [ 被免的李桥铭露面中共军方会议 魏凤和缺席](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13830059.md)
 #### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
+#### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
 #### [ 孙力军等“政法虎”被重判 陈光诚析背后天意](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831067.md)
 #### [ “挺俄贬乌”习近平成“孤家寡人”原来是他背后鼓噪？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999422.md)
 #### [ 巩固习近平的政治地位？政法系统颁“十禁”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999284.md)
-#### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
 #### [ 中共官方提台湾“一国两制” 民间“熟悉的配方骗人的鬼话”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017285.md)
 #### [ 揭公安系统买官内幕 甘肃商人失联](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13830727.md)
 #### [ 上海女子大白天被当街割喉 消息遭封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103534526.md)
@@ -50,4 +50,4 @@
 #### [ 中共公安部前副部长孙力军被判死缓](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831035.md)
 #### [ 传贵阳隔离拉错楼栋 居委报案整楼人“逃跑了”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103534703.md)
 #### [ 报告：美上百顶级科学家被招募 为华设计导弹](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13830728.md)
-#### [ 【一线采访】新疆封控反复无常 大门贴封条](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13830349.md)
+#### [ 贵阳27人头七未过 再传封控居民饿疯 大白猎女“上床换送饭”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017221.md)
