同步于: 9月24日9时2分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -47,7 +47,7 @@
 #### [ 孙力军的“政治团伙”中背后都有哪些人？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999183.md)
 #### [ 中国各地航班大面积取消 引网民猜疑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13829873.md)
 #### [ 二十大前中共修规 删敏感条文 学者解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13828576.md)
+#### [ 习近平中亚之行表现异常 被疑未打疫苗](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831161.md)
 #### [ 每人每天300元 云南重庆对集中隔离市民收费](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13830676.md)
 #### [ 中共公安部前副部长孙力军被判死缓](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831035.md)
 #### [ 习近平吃了大亏隐身6日 王岐山代替他峰会致辞(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/997740.md)
-#### [ 俄军前线遇挫下令动员 中共提战略协作释何意](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831096.md)
