--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -11,8 +11,8 @@
 #### [ 窃听高官秘密 “孙力军团伙”刘新云获刑14年(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017222.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 中国航班大面积取消 背后原因竟是这个？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656154.md)
-#### [ 【新闻看点】中国六成航班取消 有大事发生？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13830024.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
+#### [ 【新闻看点】中国六成航班取消 有大事发生？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13830024.md)
 #### [ 孙力军、傅政华等相继被判重判 分析：背后有天意(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017382.md)
 #### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ 王小洪查孙力军政治团伙 中共副总理韩正被牵出(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999389.md)
@@ -30,8 +30,8 @@
 #### [ 习近平中亚之行表现异常 被疑未打疫苗](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831161.md)
 #### [ 习近平龙脉被挖断！就在几天前！内藏惊人数字！(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/998941.md)
 #### [ 【横河观点】习继续震摄对手 危机重重恐超想像](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831586.md)
-#### [ “挺俄贬乌”习近平成“孤家寡人”原来是他背后鼓噪？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999422.md)
 #### [ 【远见快评】习缺席重要军方会 央视镜头泄露啥](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831601.md)
+#### [ “挺俄贬乌”习近平成“孤家寡人”原来是他背后鼓噪？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999422.md)
 #### [ 二十大前点名六野心家 两天判五虎 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13830330.md)
 #### [ 新华社重磅文章藏什么信号？二十大后将有腥风血雨](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656448.md)
 #### [ 科兴半夜上热搜 传疫苗造成群体肺结节 官方疑全面封杀(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017403.md)
@@ -48,6 +48,6 @@
 #### [ 习魏缺席重要军委会议 这一军官出面“叫板”？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656532.md)
 #### [ 【名家专栏】中共治下的严重货币危机](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13830462.md)
 #### [ 云南重庆向隔离市民收费 分析：中共没钱了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13831172.md)
+#### [ 上海传一男子当街杀人 受害女遭割喉浑身喷血 大陆全面封杀(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017431.md)
 #### [ 一部短片告诉你如何打败难以抗拒的诱惑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13830609.md)
 #### [ 孙力军的“政治团伙”中背后都有哪些人？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999183.md)
-#### [ 上海女子大白天被当街割喉 消息遭封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103534526.md)
