--- a/pages/p2/1017225.md
+++ b/pages/p2/1017225.md
@@ -34,7 +34,7 @@
   </span>
  </p>
  
- 
+#### [ 🎬  《超越恐惧：高智晟律師的故事》](http://95.179.228.154:10000/videos/res1/709/?378838)
 
 #### [ 🎬 《红墙的记忆》— 中南海万人和平上访纪实](http://95.179.228.154:10000/videos/res2/legend/?378838)
 
