同步于: 9月25日10时2分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -42,12 +42,12 @@
 #### [ 习近平缺席军方会议 二十大军委换人露端倪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535891.md)
 #### [ 云南重庆向隔离市民收费 分析：中共没钱了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13831172.md)
 #### [ 隔离收费 舆论哗然 重庆官员：经济很崩溃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831434.md)
-#### [ 谢金河：中国经济衰退成常态 两产业要避险](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831239.md)
 #### [ 【时事金扫描】“习失踪”引热议 普京动核武？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13832116.md)
+#### [ 谢金河：中国经济衰退成常态 两产业要避险](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831239.md)
 #### [ 人权组织联合国大会外喊话：中共滚出联合国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831715.md)
 #### [ 家运大逆转 正信现奇蹟](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656601.md)
 #### [ 孙力军被判死缓！非法持枪 涉刺习谋反？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535793.md)
 #### [ 二十大前中共高度紧张 北京高校缩短十一长假](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535963.md)
 #### [ 普京核武暗示推升局势 在联大遭多国谴责](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13831416.md)
 #### [ 【新闻看点】重大立功留命？傅政华刑超薄周](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831596.md)
-#### [ 【拍案惊奇】习判两人死缓 直指背后大佬](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831371.md)
+#### [ 章天亮：傅政华被判死缓 政治大风暴将至](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656472.md)
