--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -13,8 +13,8 @@
 #### [ 二十大召开前 红二代：不少人反对习近平连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017214.md)
 #### [ 习近平回国隐身传言四起 大外宣放风其连任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831695.md)
 #### [ 传中共百岁元老宋平罕见露面 谈话遭封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831267.md)
-#### [ 中共智库发文否定习近平言论 外界热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656562.md)
 #### [ 二十大前 习近平震慑政敌力度空前(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017466.md)
+#### [ 中共智库发文否定习近平言论 外界热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656562.md)
 #### [ 48小时内出现多个不寻常 中南海有变故？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656640.md)
 #### [ 【远见快评】习缺席重要军方会 央视镜头泄露啥](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831601.md)
 #### [ 习近平连任有悬念 二十大前可能突发两大事件(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017225.md)
@@ -30,8 +30,8 @@
 #### [ 科兴半夜上热搜 传疫苗造成群体肺结节 官方疑全面封杀(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017403.md)
 #### [ 孙力军傅政华“重大立功”供出谁？内幕成谜](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831817.md)
 #### [ 分析：唐山打人案宣判黑箱操作 难平众怒](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831867.md)
-#### [ 江峰: 习近平罕见缺席中央军委重要会议 现重大变局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656493.md)
 #### [ 【时事金扫描】“习失踪”引热议 普京动核武？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13832116.md)
+#### [ 江峰: 习近平罕见缺席中央军委重要会议 现重大变局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656493.md)
 #### [ 王小洪查孙力军政治团伙 中共副总理韩正被牵出(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999389.md)
 #### [ 俄前顾问：普京最近决定 是受到习近平影响](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13832024.md)
 #### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
@@ -48,6 +48,6 @@
 #### [ 孙力军被判死缓！非法持枪 涉刺习谋反？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535793.md)
 #### [ 人权组织联合国大会外喊话：中共滚出联合国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831715.md)
 #### [ 家运大逆转 正信现奇蹟](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656601.md)
-#### [ 二十大前中共高度紧张 北京高校缩短十一长假](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535963.md)
-#### [ 【新闻看点】重大立功留命？傅政华刑超薄周](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831596.md)
 #### [ 普京核武暗示推升局势 在联大遭多国谴责](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13831416.md)
+#### [ 二十大前中共高度紧张 北京高校缩短十一长假](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535963.md)
+#### [ 习近平隐身传言四起 公众号吹捧宋平被封](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103536224.md)
